# InvoiceProcessing

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_REVIEW.md  README.md  compound-engineering.local.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: newcomer-guide.md  project-status.md  quality-gates.md
docs/brainstorms/: 2026-02-03-fastapi-docker-invoice-service-brainstorm.md  2026-02-06-comprehensive-project-improvement-brainstorm.md  2026-02-06-layer-3-code-quality-plan.md  2026-02-11-extract-openai-cache-by-file-hash-brainstorm.md  2026-02-12-invoice-product-category-autofill-brainstorm.md  2026-02-13-extract-cache-end-to-end-latency-brainstorm.md  2026-02-17-quality-gates-for-features-deploys-refactors-brainstorm.md  (+5 more)
docs/eval-baselines/: README.md  (+4 more)
scripts/: eval_rag.sh
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_catalog_sync.py  test_cli.py  test_config.py  test_e2e.py  test_error_paths.py  test_extract_cache.py  test_extract_service.py  test_invoice_import_api.py  test_invoice_pricing.py  test_invoice_weight_parser.py  test_llm_category_normalization.py  test_llm_prompt_guidance.py  test_llm_uom_normalization.py  test_main_entrypoint.py  test_pricing_validation.py  test_rag_backend.py  test_rag_import_compat.py  test_row_enrichment_service.py  test_supabase_repository.py  test_uom_kg_weight_candidate.py  test_upload_service.py  test_validator.py
(+108 files in other folders)
