[project]
name = "invproc"
version = "0.1.0"
description = "AI-powered invoice data extraction CLI"
readme = "README.md"
requires-python = ">=3.10"
 dependencies = [
    "typer>=0.12.0",
    "rich>=14.0.0",
    "openai>=1.50.0",
    "pdfplumber>=0.10.3",
    "pytesseract>=0.3.10",
    "Pillow>=10.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pycountry>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "requests>=2.31.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.0",
    "supabase>=2.3.0",
]

[project.scripts]
invproc = "invproc.cli:app"
invproc-api = "invproc.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invproc"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
